// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders container correctly 1`] = `
<div
  className="css-1qs0ar3"
>
  The children!
</div>
`;

exports[`Container renders container correctly with top padding 1`] = `
<div
  className="css-1tl77yh"
>
  The children!
</div>
`;
